--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.eol": "\n",
-    "ev3devBrowser.download.exclude": "{**/.*,LICENSE,README.md}",
+    "ev3devBrowser.download.exclude": "{ps3-map.txt}",
     "python.pythonPath": "/usr/local/bin/python3",
     "python.linting.enabled": false,
 }
